--- a/docs/components/checkbox.html
+++ b/docs/components/checkbox.html
@@ -36,6 +36,59 @@
   </div>
 
   <div class="content-item">
+    <div>With Label</div>
+    <div class="example">
+      <div class="example-preview">
+        <label>Label<ui-checkbox name="label"></ui-checkbox></label>
+      </div>
+      <div class="example-code">
+
+<pre><code>
+&lt;label&gt;
+  Label
+  &lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;
+&lt;/label&gt;
+</code></pre>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Sizes: small, medium (default), large</div>
+    <div class="example">
+      <div class="example-preview">
+        <ui-checkbox checked data-size="small"></ui-checkbox>
+        <ui-checkbox checked data-size="medium"></ui-checkbox>
+        <ui-checkbox checked data-size="large"></ui-checkbox>
+      </div>
+      <div class="example-code">
+<pre><code>
+&lt;ui-checkbox data-size="small"&gt;&lt;/ui-checkbox&gt;
+&lt;ui-checkbox data-size="medium"&gt;&lt;/ui-checkbox&gt;
+&lt;ui-checkbox data-size="large"&gt;&lt;/ui-checkbox&gt;
+</code></pre>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Rounded: full, none</div>
+    <div class="example">
+      <div class="example-preview">
+        <ui-checkbox checked data-rounded="full"></ui-checkbox>
+        <ui-checkbox checked data-rounded="none"></ui-checkbox>
+      </div>
+      <div class="example-code">
+<pre><code>
+&lt;ui-checkbox data-rounded="full"&gt;&lt;/ui-checkbox&gt;
+&lt;ui-checkbox data-rounded="none"&gt;&lt;/ui-checkbox&gt;
+</code></pre>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
     <div>Indeterminate</div>
     <div class="example">
       <div class="example-preview">
@@ -72,40 +125,6 @@
       <div class="example-code">
 <pre><code>
 &lt;ui-checkbox disabled&gt;&lt;/ui-checkbox&gt;
-</code></pre>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Size: small | medium (default) | large</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-checkbox checked data-size="small"></ui-checkbox>
-        <ui-checkbox checked data-size="medium"></ui-checkbox>
-        <ui-checkbox checked data-size="large"></ui-checkbox>
-      </div>
-      <div class="example-code">
-<pre><code>
-&lt;ui-checkbox data-size="small"&gt;&lt;/ui-checkbox&gt;
-&lt;ui-checkbox data-size="medium"&gt;&lt;/ui-checkbox&gt;
-&lt;ui-checkbox data-size="large"&gt;&lt;/ui-checkbox&gt;
-</code></pre>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Rounded: full, none</div>
-    <div class="example">
-      <div class="example-preview">
-        <ui-checkbox checked data-rounded="full"></ui-checkbox>
-        <ui-checkbox checked data-rounded="none"></ui-checkbox>
-      </div>
-      <div class="example-code">
-<pre><code>
-&lt;ui-checkbox data-rounded="full"&gt;&lt;/ui-checkbox&gt;
-&lt;ui-checkbox data-rounded="none"&gt;&lt;/ui-checkbox&gt;
 </code></pre>
       </div>
     </div>
