--- a/docs/components/radio.html
+++ b/docs/components/radio.html
@@ -22,7 +22,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Default</div>
+    <h4>Default</h4>
     <div class="example">
       <div class="example-preview">
         <ui-radio name="radio"></ui-radio>
@@ -52,6 +52,24 @@
 &lt;/label&gt;
 </code></pre>
 
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Sizes: small, medium (default), large</div>
+    <div class="example">
+      <div class="example-preview">
+        <ui-radio data-size="small"></ui-radio>
+        <ui-radio data-size="medium"></ui-radio>
+        <ui-radio data-size="large"></ui-radio>
+      </div>
+      <div class="example-code">
+<pre><code>
+&lt;ui-radio data-size="small"&gt;&lt;/ui-radio&gt;
+&lt;ui-radio data-size="medium"&gt;&lt;/ui-radio&gt;
+&lt;ui-radio data-size="large"&gt;&lt;/ui-radio&gt;
+</code></pre>
       </div>
     </div>
   </div>
