--- a/ui/styles/core.css
+++ b/ui/styles/core.css
@@ -10,6 +10,10 @@
   --size-2x-large:4rem;
   --size-3x-large:4.5rem;
 
+  /* control borders */
+  --control-border-width:1px;
+  --control-border-style:solid;
+
   /* checkbox | switch | radio */
   --control-choice-small:round(calc(1rem * var(--scaling)),2px);
   --control-choice-medium:round(calc(1.25rem * var(--scaling)),2px);
@@ -234,6 +238,7 @@ label{
   display:flex;
   align-items:center;
   gap:1rem;
+  user-select:none;
   cursor:var(--cursor-interactive);
 
   touch-action:manipulation;
